syntax = "proto3";

package hivemind.admin.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/devilmonastery/hivemind/api/generated/go/adminpb";

// AdminService provides administrative operations
service AdminService {
  // System information
  rpc GetSystemInfo(google.protobuf.Empty) returns (GetSystemInfoResponse);
  rpc GetHealthCheck(google.protobuf.Empty) returns (GetHealthCheckResponse);

  // User management
  rpc ListAllUsers(ListAllUsersRequest) returns (ListAllUsersResponse);
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc ImpersonateUser(ImpersonateUserRequest) returns (ImpersonateUserResponse);

  // Token management (admin view of all tokens)
  rpc ListAllTokens(ListAllTokensRequest) returns (ListAllTokensResponse);
  rpc RevokeUserToken(RevokeUserTokenRequest) returns (google.protobuf.Empty);

  // System configuration
  rpc GetConfiguration(google.protobuf.Empty) returns (GetConfigurationResponse);
  rpc UpdateConfiguration(UpdateConfigurationRequest) returns (UpdateConfigurationResponse);

  // Bootstrap operations
  rpc RotateBootstrapToken(google.protobuf.Empty) returns (RotateBootstrapTokenResponse);

  // Audit and monitoring
  rpc GetAuditLogs(GetAuditLogsRequest) returns (GetAuditLogsResponse);
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);
}

// System Information
message GetSystemInfoResponse {
  string version = 1;
  google.protobuf.Timestamp start_time = 2;
  int64 uptime_seconds = 3;
  string database_type = 4;
  int32 total_users = 5;
  int32 total_notes = 6;
  int32 active_tokens = 7;
}

message GetHealthCheckResponse {
  string status = 1; // "healthy", "degraded", "unhealthy"
  map<string, string> checks = 2; // component -> status
  google.protobuf.Timestamp timestamp = 3;
}

// User Management
message ListAllUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3; // filter by email, provider, role, etc.
  string sort_by = 4; // "created_at", "last_seen", "email"
  bool sort_desc = 5;
}

message ListAllUsersResponse {
  repeated hivemind.user.v1.User users = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message GetUserDetailsRequest {
  string user_id = 1;
}

message GetUserDetailsResponse {
  hivemind.user.v1.User user = 1;
  repeated APITokenSummary tokens = 2;
  UserStatistics statistics = 3;
}

message APITokenSummary {
  string token_id = 1;
  string device_name = 2;
  repeated string scopes = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp last_used = 5;
  bool revoked = 6;
}

message UserStatistics {
  int32 total_notes = 1;
  int32 total_versions = 2;
  google.protobuf.Timestamp first_snippet = 3;
  google.protobuf.Timestamp last_activity = 4;
}

message UpdateUserRequest {
  string user_id = 1;
  hivemind.user.v1.Role role = 2; // optional
  string name = 3; // optional
  bool disabled = 4; // optional
}

message UpdateUserResponse {
  hivemind.user.v1.User user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
  bool hard_delete = 2; // true = permanent, false = soft delete
}

message ImpersonateUserRequest {
  string user_id = 1;
  string device_name = 2; // for the impersonation token
  int64 expires_in_minutes = 3; // default 60 minutes
}

message ImpersonateUserResponse {
  string api_token = 1; // temporary token for impersonation
  google.protobuf.Timestamp expires_at = 2;
}

// Token Management
message ListAllTokensRequest {
  int32 page_size = 1;
  string page_token = 2;
  string user_id = 3; // filter by user
  bool include_revoked = 4;
  string sort_by = 5; // "created_at", "last_used", "expires_at"
  bool sort_desc = 6;
}

message ListAllTokensResponse {
  repeated TokenWithUser tokens = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message TokenWithUser {
  APITokenSummary token = 1;
  hivemind.user.v1.User user = 2;
}

message RevokeUserTokenRequest {
  string user_id = 1;
  string token_id = 2;
}

// Configuration Management
message GetConfigurationResponse {
  map<string, string> config = 1; // sanitized config (no secrets)
  repeated string oidc_providers = 2;
  bool admin_user_configured = 3;
}

message UpdateConfigurationRequest {
  map<string, string> config = 1; // configuration updates
}

message UpdateConfigurationResponse {
  bool success = 1;
  repeated string warnings = 2;
}

message RotateBootstrapTokenResponse {
  string new_token = 1; // new bootstrap token
  google.protobuf.Timestamp expires_at = 2;
}

// Audit and Monitoring
message GetAuditLogsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string user_id = 3; // filter by user
  string action = 4; // filter by action type
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time = 6;
}

message GetAuditLogsResponse {
  repeated AuditLogEntry entries = 1;
  string next_page_token = 2;
}

message AuditLogEntry {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string user_id = 3;
  string action = 4; // "login", "create_token", "delete_snippet", etc.
  string resource_type = 5; // "user", "token", "snippet"
  string resource_id = 6;
  map<string, string> metadata = 7; // additional context
  string ip_address = 8;
  string user_agent = 9;
}

message GetMetricsRequest {
  string metric_name = 1; // specific metric or empty for all
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message GetMetricsResponse {
  map<string, MetricValue> metrics = 1;
}

message MetricValue {
  oneof value {
    int64 counter = 1;
    double gauge = 2;
    HistogramValue histogram = 3;
  }
  google.protobuf.Timestamp timestamp = 4;
}

message HistogramValue {
  repeated double buckets = 1;
  repeated int64 counts = 2;
}
